Added error handling
Prevents user from generation route with the same building as starting point and destination

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,7 +86,9 @@ function selectBuilding() {
          validDestination = true;                
     }
     <% } %>
-    if(validStart && validDestination) {
+    //Only proceed with route generation if a start and destination building have been set
+    ///Start and destination buildings cannot be the same
+    if(validStart && validDestination && (startBldg != destinationBldg)) {
         selectDoors();
     } else {
         alert("Please select a valid starting point and destination")
